# zr-kona-public

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  justfile  typos.toml
crates/batcher/comp/: Cargo.toml
crates/batcher/comp/examples/: batch_to_frames.rs
crates/batcher/comp/src/: brotli.rs  channel_out.rs  config.rs  lib.rs  ratio.rs  variant.rs
crates/node/disc/src/: builder.rs  driver.rs
crates/node/engine/: Cargo.toml  README.md
crates/node/engine/src/: attributes.rs  client.rs  lib.rs  query.rs
crates/node/engine/src/metrics/: mod.rs
crates/node/engine/src/task_queue/: core.rs
crates/node/gossip/src/: block_validity.rs  gater.rs
crates/node/gossip/src/rpc/: request.rs
crates/node/peers/src/: boot.rs  nodes.rs  record.rs
crates/node/rpc/src/: admin.rs  jsonrpsee.rs  lib.rs
crates/node/service/: Cargo.toml
crates/node/service/src/: lib.rs
crates/node/service/src/actors/: derivation.rs  l1_watcher_rpc.rs  mod.rs  rpc.rs  traits.rs
crates/node/service/src/metrics/: mod.rs
crates/node/service/src/service/: core.rs  mod.rs  mode.rs
crates/node/sources/: Cargo.toml
crates/node/sources/src/: lib.rs
crates/node/sources/src/signer/remote/: cert.rs
crates/node/sources/src/sync/: forkchoice.rs  mod.rs
crates/proof/driver/: Cargo.toml
crates/proof/driver/src/: core.rs  lib.rs  pipeline.rs
crates/proof/executor/src/: errors.rs  lib.rs  test_utils.rs  util.rs
crates/proof/executor/src/builder/: assemble.rs  core.rs  env.rs
crates/proof/executor/src/db/: mod.rs  traits.rs
crates/proof/mpt/: Cargo.toml
crates/proof/mpt/benches/: trie_node.rs
crates/proof/mpt/src/: errors.rs  lib.rs  list_walker.rs  node.rs  noop.rs  test_util.rs  traits.rs  util.rs
crates/proof/preimage/src/: errors.rs  hint.rs  key.rs  lib.rs  native_channel.rs  oracle.rs  traits.rs
crates/proof/proof-interop/: Cargo.toml
crates/proof/proof-interop/src/: boot.rs  consolidation.rs  hint.rs  lib.rs  pre_state.rs  provider.rs
crates/proof/proof/src/: boot.rs  caching_oracle.rs  errors.rs  executor.rs  hint.rs  lib.rs  sync.rs
crates/proof/proof/src/l1/: blob_provider.rs  chain_provider.rs  pipeline.rs
crates/proof/proof/src/l2/: chain_provider.rs
crates/proof/std-fpvm-proc/: Cargo.toml
crates/proof/std-fpvm/src/: channel.rs  io.rs  lib.rs  malloc.rs  tracing.rs
crates/proof/std-fpvm/src/mips64/: io.rs
crates/proof/std-fpvm/src/riscv64/: io.rs
crates/proof/std-fpvm/src/traits/: basic.rs
crates/protocol/derive/: Cargo.toml
crates/protocol/derive/src/attributes/: bitset.rs  mod.rs  stateful.rs
crates/protocol/derive/src/errors/: pipeline.rs  sources.rs
crates/protocol/derive/src/pipeline/: builder.rs  core.rs
crates/protocol/derive/src/sources/: blob_data.rs  blobs.rs  ethereum.rs
crates/protocol/derive/src/stages/: attributes_queue.rs  l1_retrieval.rs
crates/protocol/genesis/: Cargo.toml
crates/protocol/genesis/src/: genesis.rs  lib.rs  rollup.rs
crates/protocol/hardforks/: Cargo.toml
crates/protocol/hardforks/src/: fjord.rs  forks.rs  lib.rs  tenrec.rs  test_utils.rs  utils.rs
crates/protocol/interop/: Cargo.toml
crates/protocol/interop/src/: constants.rs  depset.rs  errors.rs  event.rs  graph.rs  lib.rs  message.rs  root.rs  safety.rs
crates/protocol/protocol/examples/: frames_to_batch.rs
crates/protocol/protocol/src/: attributes.rs  deposits.rs  lib.rs  predeploys.rs  utils.rs
crates/protocol/registry/: Cargo.toml  README.md  build.rs
crates/protocol/registry/etc/: configs.json
crates/protocol/registry/src/: chain_list.rs  lib.rs  superchain.rs
crates/providers/providers-alloy/src/: beacon_client.rs  blobs.rs  chain_provider.rs  pipeline.rs
crates/providers/providers-local/: README.md
crates/providers/providers-local/src/: buffered.rs  lib.rs
crates/supervisor/core/: Cargo.toml
crates/supervisor/core/src/: error.rs  supervisor.rs
crates/supervisor/rpc/src/: jsonrpsee.rs
crates/supervisor/service/src/: service.rs
crates/supervisor/storage/: Cargo.toml
crates/supervisor/storage/src/: chaindb.rs  chaindb_factory.rs  error.rs  lib.rs  metrics.rs  traits.rs
crates/supervisor/storage/src/models/: head_ref.rs  log.rs
crates/supervisor/storage/src/providers/: derivation_provider.rs  head_ref_provider.rs  log_provider.rs
crates/supervisor/types/src/: access_list.rs
crates/utilities/cli/src/: tracing.rs
crates/utilities/serde/src/: lib.rs
docker/: README.md  docker-bake.hcl
docker/apps/: justfile  kona_app_generic.dockerfile
docker/cannon/: mips64-unknown-none.json
docker/fpvm-prestates/: README.md  asterisc-repro.dockerfile  cannon-repro.dockerfile  justfile
docs/: package.json
docs/docs/pages/kurtosis/: overview.mdx
examples/execution-fixture/src/: main.rs
examples/gossip/: Cargo.toml
examples/gossip/src/: main.rs
tests/: .gitignore  README.md  go.mod  go.sum  justfile
tests/cmd/: main.go
tests/devnets/: first-kona-conductor.yaml  large-kona-sequencer.yaml  large-kona.yaml  preinterop-supervisor.yaml  simple-kona-conductor.yaml  simple-kona-geth.yaml  simple-kona-sequencer.yaml  simple-kona.yaml  simple-supervisor.yaml
tests/node/common/: conductor_test.go  cpu_monitor_test.go  engine_test.go  init_test.go  p2p_test.go  rpc_test.go  sync_test.go  sync_ws_test.go  tx_inclusion_test.go
tests/node/long-running/: README.md  init_test.go  tx_producer_test.go
tests/node/reorgs/: init_test.go  l2_reorg_after_l1_reorgs_test.go  l2_reorg_test.go
tests/node/restart/: conn_drop_test.go  init_test.go  restart_test.go  sequencer_restart_test.go
tests/node/utils/: mixed_preset.go
tests/supervisor/l1reorg/kurtosis/: reorg_test.go
tests/supervisor/l1reorg/sysgo/: init_test.go
tests/supervisor/l2reorg/: init_exec_msg_test.go
tests/supervisor/message/: interop_happy_tx_test.go  interop_msg_test.go
tests/supervisor/pre_interop/: init_test.go  post_test.go  pre_test.go
tests/supervisor/rpc/: rpc_test.go
tests/supervisor/sync/: resync_test.go  sync_test.go
tests/supervisor/utils/: builder.go  reorg.go
(+100 files in other folders)
