[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"
authors = ["clabby", "refcell", "theochap", "emhane"]
homepage = "https://github.com/op-rs/kona"
repository = "https://github.com/op-rs/kona"
keywords = ["ethereum", "optimism", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["**/target"]

[workspace]
resolver = "2"
members = [
  "bin/*",
  "crates/proof/*",
  "crates/node/*",
  "crates/supervisor/*",
  "crates/protocol/*",
  "crates/batcher/*",
  "crates/providers/*",
  "crates/utilities/*",
  "examples/*",
]
default-members = [
  "bin/host",
  "bin/client",
  "bin/node",
  "bin/supervisor",
  "bin/rollup",
]

[workspace.metadata.cargo-udeps.ignore]
normal = ["rustls-platform-verifier"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.dev-client]
inherits = "dev"
panic = "abort"

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[profile.release-perf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# Binaries
kona-host = { path = "bin/host", version = "1.0.2", default-features = false }
kona-client = { path = "bin/client", version = "1.0.2", default-features = false }

# Protocol
kona-comp = { path = "crates/batcher/comp", version = "0.4.5", default-features = false }
kona-derive = { path = "crates/protocol/derive", version = "0.4.5", default-features = false }
kona-interop = { path = "crates/protocol/interop", version = "0.4.5", default-features = false }
kona-genesis = { path = "crates/protocol/genesis", version = "0.4.5", default-features = false }
kona-protocol = { path = "crates/protocol/protocol", version = "0.4.5", default-features = false }
kona-registry = { path = "crates/protocol/registry", version = "0.4.5", default-features = false }
kona-hardforks = { path = "crates/protocol/hardforks", version = "0.4.5", default-features = false }

# Node
kona-rpc = { path = "crates/node/rpc", version = "0.3.2", default-features = false }
kona-peers = { path = "crates/node/peers", version = "0.1.2", default-features = false }
kona-engine = { path = "crates/node/engine", version = "0.1.2", default-features = false }
kona-sources = { path = "crates/node/sources", version = "0.1.2", default-features = false }
kona-node-service = { path = "crates/node/service", version = "0.1.3", default-features = false }
kona-disc = { path = "crates/node/disc", version = "0.1.2", default-features = false }
kona-gossip = { path = "crates/node/gossip", version = "0.1.2", default-features = false }

# Supervisor
kona-supervisor-rpc = { path = "crates/supervisor/rpc", version = "0.1.1", default-features = false }
kona-supervisor-core = { path = "crates/supervisor/core", version = "0.1.0", default-features = false }
kona-supervisor-service = { path = "crates/supervisor/service", version = "0.1.0", default-features = false }
kona-supervisor-types = { path = "crates/supervisor/types", version = "0.1.1", default-features = false }
kona-supervisor-storage = { path = "crates/supervisor/storage", version = "0.1.0", default-features = false }
kona-supervisor-metrics = { path = "crates/supervisor/metrics", version = "0.1.0", default-features = false }

# Providers
kona-providers-alloy = { path = "crates/providers/providers-alloy", version = "0.3.3", default-features = false }
kona-providers-local = { path = "crates/providers/providers-local", version = "0.1.0", default-features = false }

# Proof
kona-driver = { path = "crates/proof/driver", version = "0.4.0", default-features = false }
kona-mpt = { path = "crates/proof/mpt", version = "0.3.0", default-features = false }
kona-proof = { path = "crates/proof/proof", version = "0.3.0", default-features = false }
kona-executor = { path = "crates/proof/executor", version = "0.4.0", default-features = false }
kona-std-fpvm = { path = "crates/proof/std-fpvm", version = "0.2.0", default-features = false }
kona-preimage = { path = "crates/proof/preimage", version = "0.3.0", default-features = false }
kona-std-fpvm-proc = { path = "crates/proof/std-fpvm-proc", version = "0.2.0", default-features = false }
kona-proof-interop = { path = "crates/proof/proof-interop", version = "0.2.0", default-features = false }

# Utilities
kona-cli = { path = "crates/utilities/cli", version = "0.3.2", default-features = false }
kona-serde = { path = "crates/utilities/serde", version = "0.2.2", default-features = false }
kona-macros = { path = "crates/utilities/macros", version = "0.1.2", default-features = false }

# Alloy
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }
alloy-eips = { version = "1.0.38", default-features = false }
alloy-serde = { version = "1.0.38", default-features = false }
alloy-signer = { version = "1.0.38", default-features = false }
alloy-chains = { version = "0.2.7", default-features = false }
alloy-network = { version = "1.0.38", default-features = false }
alloy-genesis = { version = "1.0.38", default-features = false }
alloy-provider = { version = "1.0.38", default-features = false }
alloy-hardforks = { version = "0.3.5", default-features = false }
alloy-sol-types = { version = "1.3.1", default-features = false }
alloy-consensus = { version = "1.0.38", default-features = false }
alloy-transport = { version = "1.0.38", default-features = false }
alloy-rpc-types = { version = "1.0.38", default-features = false }
alloy-rpc-client = { version = "1.0.38", default-features = false }
alloy-primitives = { version = "1.3.1", default-features = false }
alloy-signer-local = { version = "1.0.38", default-features = false }
alloy-node-bindings = { version = "1.0.38", default-features = false }
alloy-rpc-types-eth = { version = "1.0.38", default-features = false }
alloy-transport-http = { version = "1.0.38", default-features = false }
alloy-rpc-types-engine = { version = "1.0.38", default-features = false }
alloy-rpc-types-beacon = { version = "1.0.38", default-features = false }
alloy-network-primitives = { version = "1.0.38", default-features = false }

# OP Alloy
op-alloy-network = { version = "0.20.0", default-features = false }
op-alloy-provider = { version = "0.20.0", default-features = false }
alloy-op-hardforks = { version = "0.3.5", default-features = false }
op-alloy-consensus = { version = "0.20.0", default-features = false }
op-alloy-rpc-types = { version = "0.20.0", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.20.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.20.0", default-features = false }

# Execution
revm = { version = "29.0.1", default-features = false }
op-revm = { version = "10.1.0", default-features = false }
alloy-evm = { version = "0.21.0", default-features = false }
alloy-op-evm = { version = "0.21.0", default-features = false }

# Reth (pinned to v1.6.0 for kona-supervisor-storage)
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

# General
notify = "6.1"
url = "2.5.4"
lru = "0.16.0"
glob = "0.3.2"
dirs = "6.0.0"
eyre = "0.6.12"
spin = "0.10.0"
clap = "4.5.39"
tower = "0.5.2"
bytes = "1.10.1"
vergen = "9.0.6"
tokio = "1.45.1"
rayon = "1.10.0"
strum = "0.27"
cfg-if = "1.0.0"
rstest = "0.25.0"
ratatui = "0.29.0"
futures = "0.3.31"
reqwest = "0.12.19"
auto_impl = "1.3.0"
tempfile = "3.20.0"
test-fuzz = "7.2.0"
arbitrary = "1.4.1"
multihash = "0.19.3"
crossterm = "0.29.0"
color-eyre = "0.6.5"
jsonrpsee = "0.25.1"
tokio-util = "0.7.15"
rustls = { version = "0.23", default-features = false }
rustls-pemfile = { version = "2.0", default-features = false }
vergen-git2 = "1.0.7"
async-trait = "0.1.88"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
async-channel = "2.3.1"
http-body-util = "0.1.3"
unsigned-varint = "0.8.0"
modular-bitfield = "0.11.2"
buddy_system_allocator = "0.11.0"

rand = { version = "0.9.1", default-features = false }
backon = { version = "1.5.1", default-features = false }
tabled = { version = "0.20.0", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
derive_more = { version = "2.0.1", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }

# Compression
getrandom = "0.3.3"
miniz_oxide = "0.8.8"
alloc-no-stdlib = "2.0.4"
brotli = { version = "8.0.1", default-features = false }

# Networking
snap = "1.1.1"
discv5 = "0.9.1"
libp2p = "0.56.0"
libp2p-stream = "0.4.0-alpha"
libp2p-identity = "0.2.11"
openssl = "0.10.73"
ipnet = "2.11.0"

# Tracing
tracing-loki = "0.2.6"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
tracing = { version = "0.1.41", default-features = false }

# Metrics
metrics = { version = "0.24.2", default-features = false }
prometheus = { version = "0.14.0", default-features = false }
metrics-exporter-prometheus = { version = "0.17.0", default-features = false }
metrics-process = "2.4.0"

# Testing
pprof = "0.15.0"
arbtest = "0.3.2"
proptest = "1.6.0"
criterion = "0.5.1"
mockall = "0.13.1"

# Serialization
rkyv = "0.8.10"
serde_repr = "0.1.20"
ethereum_ssz = "0.9.0"
toml = { version = "0.8.22", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }

# K/V database
rocksdb = { version = "0.24.0", default-features = false }

# Cryptography
sha2 = { version = "0.10.9", default-features = false }
c-kzg = { version = "2.1.1", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
secp256k1 = { version = "0.31.0", default-features = false }
ark-bls12-381 = { version = "0.5.0", default-features = false }
